feat: persist recoverable operations reports (#66)
* feat(reporting): persist immutable operations reports

* feat(ui): add operations report history and downloads

* docs(reporting): document durable snapshot contract

* fix(reporting): stabilize idempotent create retries

* fix(reporting): align parser and trace retention

* fix(ui): preserve secure report history access

* fix(reporting): harden recovery and rejected retries

* fix(reporting): preserve truthful history boundaries

* fix(reporting): guarantee bounded recovery cleanup

* fix(reporting): close remaining capacity races

* fix(reporting): reconcile terminal trace and timezone

* fix(reporting): queue admission and reconcile durable state

* fix(reporting): cap durable state before replace

* fix(reporting): reserve terminal state capacity

* fix(reporting): harden validation and trace eviction

* fix(reporting): unify report trace marker

* fix(reporting): preserve valid historical snapshots

* fix(reporting): preserve exact durable report evidence

* fix(reporting): replay reports while generation is disabled

---------

Co-authored-by: Henry <xuweitm@gmail.com>